gcp-infra/product-infra/terraform/public-subnet.tf
/* Public subnet */
resource "google_compute_subnetwork" "public" {
  name          = "my-public-subnet"
  ip_cidr_range = var.public_subnet_cidr
  region        = var.region
  network       = google_compute_network.default.id
  private_ip_google_access = true

  depends_on = [google_compute_router.default]
}

/* Public route for the subnet */
resource "google_compute_route" "public" {
  name       = "default-internet-route"
  network    = google_compute_network.default.id
  dest_range = "0.0.0.0/0"  # Default route for public subnet

  next_hop_gateway = "default-internet-gateway"  # Route traffic to the internet gateway

  depends_on = [google_compute_subnetwork.public]
}
